# The_Brownfield_Cartographer

./: .env.example  .gitignore  README.md  RECONNAISSANCE.md  final_report.md  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  day_one_answers.json  module_graph.json  onboarding_brief.md  run_metadata.json
.cartography/remotes/github.com__chacha1921__Roo-Code/: CODEBASE.md  cartography_trace.jsonl  day_one_answers.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/remotes/github.com__dbt-labs__jaffle-shop/: CODEBASE.md  cartography_trace.jsonl  day_one_answers.json  lineage_graph.json  onboarding_brief.md
.cartography/remotes/github.com__dbt-labs__jaffle_shop/: lineage_graph.json
.cartography/remotes/github.com__mitodl__ol-data-platform/: CODEBASE.md  cartography_trace.jsonl  day_one_answers.json  lineage_graph.json  module_graph.json  onboarding_brief.md
src/: cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  python_data_flow.py  sql_lineage.py  tree_sitter_analyzer.py
src/brownfield_cartographer/: cli.py  dashboard.py  orchestrator.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  schemas.py
src/utils/: __init__.py  git.py  graph_merge.py  repository.py  terminal_logger.py
tmp/: airflow_sample_dag.py  dbt_model_example.sql  dbt_schema_sample.yml  knowledge_graph.json  sample_tree_sitter_input.py  validate_dag_config_parser.py  validate_hydrologist.py  validate_hydrologist_dbt.py  validate_sql_lineage.py  validate_surveyor.py  validate_surveyor_phase1.py
tmp/hydrologist_dbt_repo/models/: schema.yml  stg_orders.sql
(+8 files in other folders)
