[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Tools for mapping and analyzing existing (brownfield) codebases."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Chalie LIjalem", email = "chalielijalem@gmail.com" },
]
dependencies = [
  "langchain-core",
  "langgraph",
  "pydantic",
  "networkx",
  "scikit-learn",
  "tiktoken",
  "tree-sitter",
  "tree-sitter-python",
  "tree-sitter-sql",
  "tree-sitter-yaml",
  "tree-sitter-javascript",
  "tree-sitter-typescript",
  "sqlglot",
]

[project.scripts]
brownfield-cartographer = "brownfield_cartographer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/analyzers", "src/brownfield_cartographer", "src/graph", "src/models", "src/utils"]

[dependency-groups]
dev = []
